# GradAttack

./: requirements.txt  setup.cfg
gradattack/attacks/: gradientinversion.py
