[metadata]
name = GradAttack
version = 0.1.1
author = "Yangsibo Huang <yangsibo@princeton.edu>, Samyak Gupta <samyakg@princeton.edu"
author_email = "samyakg@princeton.edu"
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Princeton-SysML/GradAttack
project_urls =
    Bug Tracker = https://github.com/Princeton-SysML/GradAttack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    colorama
    matplotlib
    numpy
    opacus
    pytorch_lightning
    scikit_learn
    torch
    torchcsprng
    torchmetrics
    torchvision
